failing tests commented out